# shelly-plug-battery-charging-controller

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  biome.json  install.py  pyproject.toml  release-please-config.json  shelly_charge_limiter.js
.github/workflows/: code-quality.yaml  release.yaml
