[project]
name = "shelly-plug-battery-charging-controller"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.2",
    "httpx2>=2.7.0",
    "pre-commit>=4.6.0",
]

[project.scripts]
shelly-install = "install:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["install.py"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["D", "E", "F", "I"]
